# Finance-System

./: .gitignore  README.md
myerp/apps/finance_app/: README.md  pyproject.toml
myerp/apps/finance_app/.github/workflows/: ci.yml
myerp/apps/finance_app/finance_app/: add_status_field_to_imprest_request.py  create_imprest_liquidation.py  create_imprest_liquidation_workflow.py  create_imprest_request.py  create_imprest_request_workflow.py  email_alert_overdue_liquidation.py  hooks.py  patches.txt  payment_entry_auto_link.py
myerp/apps/finance_app/finance_app/config/: desktop.py  docs.py
myerp/apps/finance_app/finance_app/fixtures/: custom_field.json  doctype.json
